# cupel

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  LICENSE  README.md  TODO.md  buf.yaml  build.rs  clippy.toml  install.sh
.claude/skill/issue_writer/: SKILL.md
.cupel/: AGENTS.md  bash-deny
.entire/: settings.json
.epic/: git.md  macos_app.md
.github/workflows/: ci.yml  release.yml
.issues/: feature-git-abstraction-layer.md  feature-macos-app-foundation.md
.opencode/: opencode.json
.opencode/prompts/: brainstorm.txt  review.txt  rubber_duck.txt
12/9a7646cb08/: metadata.json
12/9a7646cb08/0/: full.jsonl  metadata.json
29/c926607d84/: metadata.json
29/c926607d84/0/: metadata.json
29/c926607d84/1/: content_hash.txt  full.jsonl  metadata.json
29/c926607d84/2/: content_hash.txt  full.jsonl  metadata.json
61/beaa1dfa41/: metadata.json
61/beaa1dfa41/0/: metadata.json
61/beaa1dfa41/1/: metadata.json
61/beaa1dfa41/2/: content_hash.txt  full.jsonl  metadata.json
78/71b63921e6/: metadata.json
78/71b63921e6/0/: metadata.json
78/71b63921e6/1/: metadata.json
78/71b63921e6/2/: content_hash.txt  full.jsonl  metadata.json
80/1c9b2420de/: metadata.json
80/1c9b2420de/0/: metadata.json  prompt.txt
80/1c9b2420de/1/: metadata.json
80/1c9b2420de/2/: content_hash.txt  full.jsonl  metadata.json
84/8e1b99bff6/: metadata.json
84/8e1b99bff6/0/: metadata.json
84/8e1b99bff6/1/: metadata.json
84/8e1b99bff6/2/: content_hash.txt  full.jsonl  metadata.json
9c/73e5f67513/: metadata.json
9c/73e5f67513/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
9c/73e5f67513/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
9c/73e5f67513/2/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
a2/f2efe3a8a0/: metadata.json
a2/f2efe3a8a0/0/: metadata.json
a2/f2efe3a8a0/1/: metadata.json
a2/f2efe3a8a0/2/: content_hash.txt  full.jsonl  metadata.json
a3/b3cc73489a/: metadata.json
a3/b3cc73489a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a3/b3cc73489a/1/: content_hash.txt  full.jsonl  metadata.json
a3/b3cc73489a/2/: content_hash.txt  full.jsonl  metadata.json
a3/b3cc73489a/3/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a3/b3cc73489a/4/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a3/b3cc73489a/5/: metadata.json  prompt.txt
a3/b3cc73489a/6/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a3/b3cc73489a/7/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a5/b460cbd8bc/: metadata.json
a5/b460cbd8bc/0/: metadata.json
a5/b460cbd8bc/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a5/b460cbd8bc/2/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a5/b460cbd8bc/3/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
ae/5670789c5a/: metadata.json
ae/5670789c5a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
ae/5670789c5a/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
ae/5670789c5a/2/: content_hash.txt  metadata.json
bb/9e32208bc1/: metadata.json
bb/9e32208bc1/0/: metadata.json
bb/9e32208bc1/1/: metadata.json
bb/9e32208bc1/2/: content_hash.txt  full.jsonl  metadata.json
cd/7a777574b3/: metadata.json
cd/7a777574b3/0/: full.jsonl  metadata.json
cd/7a777574b3/1/: metadata.json
cd/7a777574b3/2/: content_hash.txt  full.jsonl  metadata.json
crates/cupel-agent/: Cargo.toml
crates/cupel-agent/src/: agent.rs  agent_loop.rs  compaction.rs  lib.rs  types.rs
crates/cupel-agent/tests/: compaction.rs  retry.rs  seeded_history.rs
crates/cupel-coding-agent/: Cargo.toml
crates/cupel-coding-agent/src/: bootstrap.rs  commands.rs  guard.rs  hooks.rs  lib.rs  main.rs  models.rs  ollama.rs  providers.rs  resources.rs  review.rs  search.rs  session.rs  settings.rs  system_prompt.rs  truncate.rs
crates/cupel-coding-agent/src/modes/: mod.rs  plain.rs
crates/cupel-coding-agent/src/modes/interactive/: app.rs  autocomplete.rs  fuzzy.rs  input.rs  mod.rs  transcript.rs  ui.rs
crates/cupel-coding-agent/src/tools/: bash.rs  edit.rs  edit_diff.rs  file_queue.rs  grep.rs  mod.rs  read.rs  write.rs
crates/cupel-coding-agent/tests/: guard_veto.rs
crates/cupel-core/: Cargo.toml
crates/cupel-core/src/: catalog.rs  error.rs  event_stream.rs  json_util.rs  lib.rs  model.rs  options_util.rs  overflow.rs  provider.rs  retry.rs  sse.rs  transform.rs  types.rs
crates/cupel-core/src/providers/: anthropic.rs  bedrock.rs  mod.rs  openai_completions.rs  openai_responses.rs
crates/cupel-index/: Cargo.toml
crates/cupel-index/src/: lib.rs
crates/cupel-inference/: Cargo.toml
crates/cupel-inference/src/: api_registry.rs  client.rs  context.rs  diagnostics.rs  error.rs  event.rs  event_stream.rs  lib.rs  model.rs  provider.rs  registry.rs  stream.rs  tool.rs  types.rs  usage.rs
crates/cupel-inference/src/providers/: faux.rs  mod.rs  openai_compat.rs  openai_responses.rs  sse.rs
crates/entire-agent-cupel/: Cargo.toml  README.md
crates/entire-agent-cupel/src/: agent.rs  main.rs  types.rs
d3/2fc8dc5613/: metadata.json
d3/2fc8dc5613/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
ed/5439726d60/: metadata.json
fe/bf7b4b6c16/: metadata.json
packaging/: README.md  update-changelog.sh  update-formula.sh
packaging/homebrew/: cupel.rb
proto/: cellar.proto  metrics.proto
proto/cellar/: cellar.proto
proto/metrics/: metrics.proto
src/: actions.rs  app.rs  assets.rs  context.rs  db.rs  errors.rs  git_panel.rs  lib.rs  main.rs  metric_service.rs  model.rs  proto.rs  theme.rs  tool.rs  usage.rs
src/db/: mod.rs  models.rs
src/diff/: diff_map.rs  gutter.rs  mod.rs  project_diff.rs  split_diff.rs
src/git/: backend_router.rs  diff.rs  error.rs  fake_repo.rs  forge_state.rs  gh_cli.rs  mod.rs  real_repo.rs  repo_entity.rs  repository.rs  store.rs  types.rs
src/server/: mod.rs  server.rs  server_impl.rs
src/ui/: app.rs  git_panel.rs  mod.rs
tests/: integration_test.rs
(+10 files in other folders)
