[package]
name = "cupel-coding-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cupel"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
cupel-agent.workspace = true
cupel-core.workspace = true
futures-util.workspace = true
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
