[package]
name = "cupel-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Intentionally empty for the first iteration. See CONCEPT.md - the crate
# will grow `fff`, a tantivy-or-custom trigram index, and a file watcher.

[lints]
workspace = true
