[package]
name = "cupel-inference"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
default = ["provider-faux", "provider-openai-compat", "provider-openai-responses"]
provider-faux = []
provider-openai-compat = []
provider-openai-responses = []
provider-anthropic = []
provider-google = []
provider-mistral = []
provider-bedrock = []

[lints]
workspace = true
