[package]
name = "entire-agent-cupel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Entire CLI external-agent shim for cupel (protocol v1)"

# The binary MUST be named exactly `entire-agent-cupel`: the Entire CLI
# discovers agents by scanning $PATH for `entire-agent-<name>` executables
# and uses `<name>` as the registry identifier.
[[bin]]
name = "entire-agent-cupel"
path = "src/main.rs"

[dependencies]
# Reuses cupel's own session/layout code (transcript format, sessions dir,
# project slug) so the shim can never drift from what cupel writes.
cupel-coding-agent.workspace = true
cupel-agent.workspace = true
cupel-core.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
